Fix text alignment in chapter 12

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -14,7 +14,7 @@ abbr.temperature{
 	font-variant: all-small-caps;
 }
 
-#chapter-12-subchapter-4 > section p:last-child{
+#chapter-12-subchapter-4 > section > p:last-child{
 	margin-top: 1em;
 	text-align: center;
 }
